--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "js-van",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "前端数据存储库，支持cookie与webstorage",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "typings": "index.d.ts",
+  "files": [
+    "src",
+    "dist"
+  ],
   "scripts": {
     "build": "cross-env NODE_ENV=prod node ./build/bin/build.js",
     "check-types": "npx tsc --watch",
