--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-van",
   "version": "0.0.4",
-  "description": "前端数据存储库，支持cookie与storage",
+  "description": "前端数据持久化方案，支持cookie与storage",
   "main": "./lib/index.js",
   "typings": "./types/index.d.ts",
   "files": [
